// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Simple Text renders correctly 1`] = `
<div
  className="text  "
>
  <p>
    Lorem Ipsum dolor sit ammet
  </p>
</div>
`;

exports[`Text Text with class renders correctly 1`] = `
<div
  className="text  text-class"
>
  <p>
    Lorem Ipsum dolor sit ammet
  </p>
</div>
`;

exports[`Text Two column text renders correctly 1`] = `
<div
  className="text text--two-columns "
>
  <p>
    Lorem Ipsum dolor sit ammet
  </p>
</div>
`;
